--- a/cosmosLibrary/src/styles.scss
+++ b/cosmosLibrary/src/styles.scss
@@ -2,3 +2,83 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$white: #FFF;
+$black:#000;
+$gray-1:#F2F2F2;
+$gray-2: #818080;
+$gray-3:#363636;
+$gray-4:#C2C2C2;
+$blue-1:#0a0082;
+$blue-2:rgb(150, 150, 255);
+
+.disposition-input {
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: center;
+}
+
+.form-group1 {
+    position: relative;
+    margin-bottom: 1rem;
+    justify-self: center;
+    width: 100%;
+  }
+  
+.form-control1{
+    border: 2px solid $gray-2;
+    height: 30px;
+    background-color: transparent;
+    color: rgba($color: $gray-2, $alpha: 1);
+    font-size: 16px;
+    flex-grow: 5;
+    letter-spacing: 0.04rem;
+    width: 100%;
+    border-radius: 5px;
+}
+
+input:focus{
+    outline-color: $black;
+}
+
+button:focus{
+    outline-color: $blue-1;
+    border-radius: 5px;
+}
+
+.custom-large-btn {
+    font-size: 23px;
+    background-color: $blue-2;
+    color:$gray-3;
+    border-radius: 10px;
+    letter-spacing: 0.04rem;
+    padding: 0.5rem;
+    height: 40px;
+    width: 50%;
+    min-width: 200px;
+    border: 0;
+    margin-top: 5%;
+    align-self: center;
+    text-align: center;
+    line-height: 0.5rem;
+}
+
+.card-body{
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: center;
+}
+
+.disposition1{
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: center;
+}
+
+.forget-password{
+    text-align: center;
+    text-decoration: underline;
+}
