--- a/cosmosLibrary/src/styles.scss
+++ b/cosmosLibrary/src/styles.scss
@@ -64,7 +64,9 @@ button:focus{
     line-height: 0.5rem;
 }
 
-.card-body{
+
+
+.row, .card-body{
     display: flex;
     flex-direction: column;
     align-items: space-evenly;
