--- a/cosmosLibrary/src/app/components/session/login/login.component.html
+++ b/cosmosLibrary/src/app/components/session/login/login.component.html
@@ -1,12 +1,5 @@
 <div class="container-fluid bg-color">
-    <div class="row bg-image">
-        <div class="col-sm-12 col-md-7 col-lg-5 mx-auto">
-            <div class="disposition2">
-                <img src="/assets/images/icon1.png" alt="" class="img-fluid size1"/>
-                <img src="/assets/images/logo1.png" alt="" class="img-fluid size2"/>
-            </div>
-        </div>
-    </div>
+    <app-header></app-header>
 
     <div class="row disposition3">
         <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
