--- a/cosmosLibrary/src/styles.scss
+++ b/cosmosLibrary/src/styles.scss
@@ -84,3 +84,8 @@ button:focus{
     text-align: center;
     text-decoration: underline;
 }
+
+.bg-color{
+    background-color: #F1B764;
+    height: 100%;
+}
