--- a/cosmosLibrary/src/app/components/session/login/login.component.html
+++ b/cosmosLibrary/src/app/components/session/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="row disposition3">
         <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
             <div class="card-body">
-                <form class="disposition mt-2" #loginForm= "ngForm" (ngSubmit)= "login()" [formGroup]="loginForm">
+                <form class="disposition mt-2" #logForm= "ngForm" (ngSubmit)= "login()" [formGroup]="loginForm">
 
                     <app-input-text 
                     [headerText]="'Nombre de usuario'" 
