--- a/cosmosLibrary/src/app/components/session/login/login.component.html
+++ b/cosmosLibrary/src/app/components/session/login/login.component.html
@@ -9,7 +9,7 @@
                     <app-input-text 
                     [headerText]="'Nombre de usuario'" 
                     [inputType]="'text'" 
-                    [control]="loginForm.get('name')"
+                    [control]="loginForm.get('username')"
                     ></app-input-text>
 
                     <app-input-text 
