--- a/cosmosLibrary/src/app/components/system/input-select/input-select.component.html
+++ b/cosmosLibrary/src/app/components/system/input-select/input-select.component.html
@@ -1,1 +1,8 @@
-<p>input-select works!</p>
+<div class="form-group1 disposition-input">
+    <label class="text-secondary mb-0">{{headerText}}</label>
+    <select id="select" class="form-control1" [formControl]="control">
+      <option class="option" *ngFor="let opt of options" [value]="opt.id">
+        {{opt.name}}
+      </option>
+    </select>
+</div>
