--- a/cosmosLibrary/src/app/components/session/recover-password/recover-password.component.html
+++ b/cosmosLibrary/src/app/components/session/recover-password/recover-password.component.html
@@ -1,1 +1,35 @@
-<p>recover-password works!</p>
+<div class="container-fluid bg-color">
+    <app-header></app-header>
+
+    <div class="row disposition3">
+        <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
+            <div class="card-body">
+                <form class="disposition mt-2" #recoverF= "ngForm" (ngSubmit)= "recover_password()" [formGroup]="recoverForm">
+
+                    <app-input-text 
+                    [headerText]="'Contraseña actual'" 
+                    [inputType]="'password'" 
+                    [control]="recoverForm.get('password')"
+                    ></app-input-text>
+
+                    <app-input-text 
+                    [headerText]="'Nueva contraseña'" 
+                    [inputType]="'password'" 
+                    [control]="recoverForm.get('newPassword')"
+                    ></app-input-text>
+
+                    <app-input-text 
+                    [headerText]="'Confirmación de contraseña'" 
+                    [inputType]="'password'" 
+                    [control]="recoverForm.get('confirmPassword')"
+                    ></app-input-text>
+
+                    <div class="disposition1 mt-2">
+                        <button class="custom-large-btn mr-4" type="submit" [disabled]="recoverForm.invalid">Guardar</button>
+                        <button class="custom-large-btn" type="button" (click)="goTo('login')">Cancelar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
