--- a/cosmosLibrary/src/app/components/admin/main-admin/main-admin.component.scss
+++ b/cosmosLibrary/src/app/components/admin/main-admin/main-admin.component.scss
@@ -1,6 +1,7 @@
-.disposition1
-{
+.row{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: space-around;
 }
