--- a/cosmosLibrary/src/styles.scss
+++ b/cosmosLibrary/src/styles.scss
@@ -48,25 +48,23 @@ button:focus{
 }
 
 .custom-large-btn {
-    font-size: 23px;
+    font-size: 20px;
     background-color: $blue-2;
     color:$gray-3;
     border-radius: 10px;
     letter-spacing: 0.04rem;
     padding: 0.5rem;
-    height: 40px;
-    width: 50%;
-    min-width: 200px;
+    min-width: 150px;
     border: 0;
     margin-top: 5%;
     align-self: center;
     text-align: center;
-    line-height: 0.5rem;
+    line-height: 1rem;
 }
 
 
 
-.row, .card-body{
+.card-body{
     display: flex;
     flex-direction: column;
     align-items: space-evenly;
