--- a/cosmosLibrary/src/app/components/session/login/login.component.html
+++ b/cosmosLibrary/src/app/components/session/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid bg-color">
     <app-header></app-header>
 
-    <div class="row disposition3">
+    <div class="row">
         <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
             <div class="card-body">
-                <form class="disposition mt-2" #logForm= "ngForm" (ngSubmit)= "login()" [formGroup]="loginForm">
+                <form class="mt-2" #logForm= "ngForm" (ngSubmit)= "login()" [formGroup]="loginForm">
 
                     <app-input-text 
                     [headerText]="'Nombre de usuario'" 
