--- a/cosmosLibrary/src/app/components/system/input-image/input-image.component.html
+++ b/cosmosLibrary/src/app/components/system/input-image/input-image.component.html
@@ -1,9 +1,9 @@
 <div class="form-group1 disposition">
     <div class="content-image">
-        <img [src]="imgURL | base64" class="profile">
+        <img [src]="imgURL" class="profile">
         <div>
             <input matInput type="text" disabled  class="form-control" style="display:none; width:10%;">
-            <input #file type="file" id="inputPhoto" style="display:none; width:10%;" accept='image/*' (change)="fileChangeEvent(file.files)">
+            <input #file type="file" style="display:none; width:10%;" accept='image/*' (change)="fileChangeEvent(file.files)">
             <div class="image-button" (click)="selectFile(file)">
                 <mat-icon [inline]=true>add</mat-icon>
             </div>
