--- a/cosmosLibrary/src/styles.scss
+++ b/cosmosLibrary/src/styles.scss
@@ -102,3 +102,7 @@ button:focus{
     padding: 0 !important;
     margin: 0 !important;
 }
+
+.mat-snack-bar-container{
+    background-color: $gray-1;
+}
