--- a/cosmosLibrary/src/app/components/admin/books/add-book/add-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/add-book/add-book.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
 
     <div class="row">
-        <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
+        <div class="col-sm-6 col-md-6 col-lg-4">
             <div class="card-body">
                 <form class="mt-2" #crtForm= "ngForm" (ngSubmit)= "createBook()" [formGroup]="createForm">
 
@@ -79,6 +79,11 @@
 
             </div>
         </div>
+
+        <div class="bg-primary col-sm-6 col-md-6 col-lg-6">
+            
+        </div>
+
     </div>
 
 </div>
