--- a/cosmosLibrary/src/app/components/root/administrators/manage-admin/manage-admin.component.html
+++ b/cosmosLibrary/src/app/components/root/administrators/manage-admin/manage-admin.component.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
             <div class="card-body">
-                <form class="mt-2" #logForm= "ngForm" (ngSubmit)= "manageAdmin()" [formGroup]="manageForm">
+                <form class="mt-2" #logForm= "ngForm" (ngSubmit)= "createAdmin()" [formGroup]="manageForm">
 
                     <app-input-text 
                     [headerText]="'Nombre de usuario admin'" 
