--- a/cosmosLibrary/src/app/components/system/input-date/input-date.component.html
+++ b/cosmosLibrary/src/app/components/system/input-date/input-date.component.html
@@ -1,7 +1,7 @@
-<div class="cont-select">
-    <p class="fecha">{{headerText}}</p>
+<div class="form-group1 disposition-input">
+    <p class="text-dark mb-0">{{headerText}}</p>
     <div class="cont-date">
-        <input matInput [matDatepicker]="picker1" class="date" [formControl]="control">
+        <input matInput [matDatepicker]="picker1" class="form-control1" [formControl]="control">
         <mat-datepicker-toggle class="touch" matSuffix [for]="picker1"></mat-datepicker-toggle>
         <mat-datepicker touchUi #picker1></mat-datepicker>
     </div>
