--- a/cosmosLibrary/src/app/components/admin/books/add-book/add-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/add-book/add-book.component.html
@@ -3,74 +3,82 @@
     <app-header></app-header>
 
     <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-4">
+        <div class="col-sm-7 col-md-7 col-lg-4">
             <div class="card-body">
-                <form class="mt-2" #crtForm= "ngForm" (ngSubmit)= "createBook()" [formGroup]="createForm">
+                <form class="mt-2 d-flex" #crtForm= "ngForm" (ngSubmit)= "createBook()" [formGroup]="createForm">
 
-                    <app-input-text 
-                    [headerText]="'Título'" 
-                    [inputType]="'text'" 
-                    [control]="createForm.get('title')"
-                    ></app-input-text>
+                    <div>
 
-                    <app-input-text 
-                    [headerText]="'Autor'" 
-                    [inputType]="'text'" 
-                    [control]="createForm.get('author')"
-                    ></app-input-text>
+                        <app-input-text 
+                        [headerText]="'Título'" 
+                        [inputType]="'text'" 
+                        [control]="createForm.get('title')"
+                        ></app-input-text>
 
-                    <app-input-date 
-                    [headerText]="'Fecha de publicación'" 
-                    [control]="createForm.get('publish_year')"
-                    ></app-input-date>
+                        <app-input-text 
+                        [headerText]="'Autor'" 
+                        [inputType]="'text'" 
+                        [control]="createForm.get('author')"
+                        ></app-input-text>
 
-                    <app-input-select
-                    [headerText]="'Género'"
-                    [control]="createForm.get('topic')" 
-                    [options]="optionsTopic" 
-                    ></app-input-select>
+                        <app-input-date 
+                        [headerText]="'Fecha de publicación'" 
+                        [control]="createForm.get('publish_year')"
+                        ></app-input-date>
 
-                    <app-input-text 
-                    [headerText]="'Páginas'" 
-                    [inputType]="'number'" 
-                    [control]="createForm.get('pages_number')"
-                    ></app-input-text>
+                        <app-input-select
+                        [headerText]="'Género'"
+                        [control]="createForm.get('topic')" 
+                        [options]="optionsTopic" 
+                        ></app-input-select>
 
-                    <app-input-text 
-                    [headerText]="'Editorial'" 
-                    [inputType]="'text'" 
-                    [control]="createForm.get('editorial')"
-                    ></app-input-text>
+                        <app-input-text 
+                        [headerText]="'Páginas'" 
+                        [inputType]="'number'" 
+                        [control]="createForm.get('pages_number')"
+                        ></app-input-text>
 
-                    <app-input-select
-                    [headerText]="'Idioma'"
-                    [control]="createForm.get('language')" 
-                    [options]="optionsLanguage" 
-                    ></app-input-select>
+                        <app-input-radio
+                        [headerText]="'Estado'"
+                        [control]="createForm.get('status')" 
+                        [options]="optionsStatus" 
+                        ></app-input-radio>
 
-                    <app-input-text 
-                    [headerText]="'ISBN'" 
-                    [inputType]="'text'" 
-                    [control]="createForm.get('isbn')"
-                    ></app-input-text>
+                        <mat-checkbox [formControl]="createForm.get('on_news')">Publicar en noticias</mat-checkbox>
 
-                    <app-input-image
-                    [headerText]="'Portada'"
-                    [control]="createForm.get('front_image')" 
-                    ></app-input-image>
+                    </div>
 
-                    <app-input-image
-                    [headerText]="'Contraportada'"
-                    [control]="createForm.get('back_image')" 
-                    ></app-input-image>
+                    <div>
 
-                    <app-input-radio
-                    [headerText]="'Estado'"
-                    [control]="createForm.get('status')" 
-                    [options]="optionsStatus" 
-                    ></app-input-radio>
+                        <app-input-text 
+                        [headerText]="'Editorial'" 
+                        [inputType]="'text'" 
+                        [control]="createForm.get('editorial')"
+                        ></app-input-text>
 
-                    <mat-checkbox [formControl]="createForm.get('on_news')">Publicar en noticias</mat-checkbox>
+                        <app-input-select
+                        [headerText]="'Idioma'"
+                        [control]="createForm.get('language')" 
+                        [options]="optionsLanguage" 
+                        ></app-input-select>
+
+                        <app-input-text 
+                        [headerText]="'ISBN'" 
+                        [inputType]="'text'" 
+                        [control]="createForm.get('isbn')"
+                        ></app-input-text>
+
+                        <app-input-image
+                        [headerText]="'Portada'"
+                        [control]="createForm.get('front_image')" 
+                        ></app-input-image>
+
+                        <app-input-image
+                        [headerText]="'Contraportada'"
+                        [control]="createForm.get('back_image')" 
+                        ></app-input-image>
+
+                    </div>
                     
                     <div class="disposition1 mt-2">
                         <button class="custom-large-btn" type="submit" [disabled]="createForm.invalid">Ingresar</button>
@@ -79,11 +87,6 @@
 
             </div>
         </div>
-
-        <div class="bg-primary col-sm-6 col-md-6 col-lg-6">
-            
-        </div>
-
     </div>
 
 </div>
