--- a/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
@@ -1,1 +1,16 @@
-<p>manage-book works!</p>
+<div class="container-fluid bg-color">
+    <app-header></app-header>
+
+<div class="row">
+    <div class="col-lg-2 col-md-3 col-sm-4 mb-3">
+        <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="http://placehold.it/400x700" alt=""></a>
+        <div class="card-body">
+            <h4 class="card-title">
+            <a href="#">Project One</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+        </div>
+        </div>
+    </div>
+</div>
