--- a/cosmosLibrary/src/app/components/session/recover-password/recover-password.component.html
+++ b/cosmosLibrary/src/app/components/session/recover-password/recover-password.component.html
@@ -7,26 +7,14 @@
                 <form class="disposition mt-2" #recoverF= "ngForm" (ngSubmit)= "recover_password()" [formGroup]="recoverForm">
 
                     <app-input-text 
-                    [headerText]="'Contraseña actual'" 
-                    [inputType]="'password'" 
-                    [control]="recoverForm.get('password')"
-                    ></app-input-text>
-
-                    <app-input-text 
-                    [headerText]="'Nueva contraseña'" 
-                    [inputType]="'password'" 
-                    [control]="recoverForm.get('newPassword')"
-                    ></app-input-text>
-
-                    <app-input-text 
-                    [headerText]="'Confirmación de contraseña'" 
-                    [inputType]="'password'" 
-                    [control]="recoverForm.get('confirmPassword')"
+                    [headerText]="'Correo electrónico'" 
+                    [inputType]="'text'" 
+                    [control]="recoverForm.get('email')"
                     ></app-input-text>
 
                     <div class="disposition1 mt-2">
-                        <button class="custom-large-btn mr-4" type="submit" [disabled]="recoverForm.invalid">Guardar</button>
-                        <button class="custom-large-btn" type="button" (click)="goTo('login')">Cancelar</button>
+                        <button class="custom-large-btn mr-4" type="submit" [disabled]="recoverForm.invalid">Enviar</button>
+                        <button class="custom-large-btn" type="button" (click)="goTo('login')">Volver</button>
                     </div>
                 </form>
             </div>
