--- a/cosmosLibrary/src/app/components/root/administrators/manage-admin/manage-admin.component.html
+++ b/cosmosLibrary/src/app/components/root/administrators/manage-admin/manage-admin.component.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-sm-7 col-md-7 col-lg-4 mx-auto">
             <div class="card-body">
-                <form class="mt-2" #logForm= "ngForm" (ngSubmit)= "manageAdmin()" [formGroup]="manageForm">
+                <form class="mt-2" #logForm= "ngForm" (ngSubmit)= "createAdmin()" [formGroup]="manageForm">
 
                     <app-input-text 
                     [headerText]="'Nombre de usuario admin'" 
@@ -21,12 +21,15 @@
                     <app-input-text 
                     [headerText]="'Confirmación de contraseña'" 
                     [inputType]="'password'" 
-                    [control]="manageForm.get('confimationPassword')"
+                    [control]="manageForm.get('confirmationPassword')"
                     ></app-input-text>
+
+                    <div *ngIf="isFormError()" class="alert alert-danger" role="alert">
+                        <p *ngIf="manageForm.errors.noMatchingPassword">Las contraseñas no coinciden.</p>
+                    </div>
                     
                     <div class="disposition1 mt-2">
                         <button class="custom-large-btn" type="submit" [disabled]="manageForm.invalid">Crear admin</button>
-                        <button class="custom-large-btn" type="submit" [disabled]="manageForm.invalid">Cancelar</button>
                     </div>
                 </form>
             </div>
