--- a/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
@@ -2,15 +2,22 @@
     <app-header></app-header>
 
 <div class="row">
-    <div class="col-lg-2 col-md-3 col-sm-4 mb-3">
+    <div class="col-lg-2 col-md-3 col-sm-4 mb-3", *ngFor='let book of books'>
         <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/400x700" alt=""></a>
+        <img class="card-img-top" [src]="book.front_image" alt="">
         <div class="card-body">
             <h4 class="card-title">
-            <a href="#">Project One</a>
+            {{book.title}}
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text">
+                Autor {{book.author}} <br> 
+                Género {{book.topic}} <br>
+                Idioma {{book.language}} <br>
+                Editorial {{book.editorial}}
+            </p>
         </div>
+            <button class="custom-large-btn">Editar</button>
+            <button class="custom-large-btn">Eliminar</button>
         </div>
     </div>
-</div>
+</div>  
