--- a/cosmosLibrary/src/app/components/admin/books/delete-book/delete-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/delete-book/delete-book.component.html
@@ -1,1 +1,8 @@
-<p>delete-book works!</p>
+<div class="container disposition-input">
+    <p class="text-dark">Esta seguro que desea eliminar el libro seleccionado, si es asi, presione eliminar, de lo contrario presione cualquier otra parte de la pantalla afuera del cuadro</p>
+
+    <div class="mt-2">
+        <button class="btn-light custom-large-btn text-center" (click)="accept()">Eliminar</button>
+    </div>
+
+</div>
