--- a/cosmosLibrary/src/app/components/admin/books/edit-book/edit-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/edit-book/edit-book.component.html
@@ -1,1 +1,83 @@
-<p>edit-book works!</p>
+
+<div class="container-fluid bg-color">
+    <app-header></app-header>
+
+    <div class="container py-5">
+        <form class="row mt-2" #crtForm= "ngForm" (ngSubmit)= "updateBook()" [formGroup]="updateForm">
+
+            <app-input-text class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Título'" 
+            [inputType]="'text'" 
+            [control]="updateForm.get('title')"
+            ></app-input-text>
+
+            <app-input-text class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Autor'" 
+            [inputType]="'text'" 
+            [control]="updateForm.get('author')"
+            ></app-input-text>
+
+            <app-input-date class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Fecha de publicación'" 
+            [control]="updateForm.get('publish_year')"
+            ></app-input-date>
+
+            <app-input-select class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Género'"
+            [control]="updateForm.get('topic')" 
+            [options]="optionsTopic" 
+            ></app-input-select>
+
+            <app-input-text class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Páginas'" 
+            [inputType]="'number'" 
+            [control]="updateForm.get('pages_number')"
+            ></app-input-text>
+
+
+            <app-input-text class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Editorial'" 
+            [inputType]="'text'" 
+            [control]="updateForm.get('editorial')"
+            ></app-input-text>
+
+            <app-input-select class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Idioma'"
+            [control]="updateForm.get('language')" 
+            [options]="optionsLanguage" 
+            ></app-input-select>
+
+            <app-input-text class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'ISBN'" 
+            [inputType]="'text'" 
+            [control]="updateForm.get('isbn')"
+            ></app-input-text>
+
+            <mat-checkbox class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto" [formControl]="updateForm.get('on_news')">Publicar en noticias</mat-checkbox>
+
+            <app-input-radio class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Estado'"
+            [control]="updateForm.get('status')" 
+            [options]="optionsStatus" 
+            ></app-input-radio>
+
+
+            <app-input-image class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Portada'"
+            [control]="updateForm.get('front_image')" 
+            ></app-input-image>
+
+            <app-input-image class="col-lg-4 col-md-4 col-sm-6 mb-0 mx-lg-auto"
+            [headerText]="'Contraportada'"
+            [control]="updateForm.get('back_image')" 
+            ></app-input-image>
+
+        
+            
+            <div class="d-flex justify-content-center col-lg-12 col-md-12 col-sm-12 m-0">
+                <button class="custom-large-btn" type="submit" [disabled]="updateForm.invalid">Guardar</button>
+            </div>
+        </form>
+    </div>
+
+</div>
