--- a/cosmosLibrary/src/app/components/main/home/home.component.html
+++ b/cosmosLibrary/src/app/components/main/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container-fluid bg-color">
+    <app-header></app-header>
+    <div class="d-flex flex-column justify-content-center">
+        <div class="form-group-2">
+            <mat-icon class="position" [inline]=true>search</mat-icon>
+            <input class="form-control-2" type="text" name = "search" (keyup)="search($event)" placeholder="Titulo, autor, editorial..." [(ngModel)] = "parameter">
+        </div>
+        <button class="custom-large-btn" type="button" (click)="goTo('profile-client')">Perfil</button>
+    </div>
+</div>
