--- a/cosmosLibrary/src/app/components/session/signup/signup.component.html
+++ b/cosmosLibrary/src/app/components/session/signup/signup.component.html
@@ -46,10 +46,10 @@
             [control]="signupForm.get('city')"
             [options]="cityOptions"></app-input-select>
 
-            <app-input-radio class="col-lg-3 col-md-4 col-sm-6 mb-2"
+            <app-input-select class="col-lg-3 col-md-4 col-sm-6 mb-2"
             [headerText]="'Género'"
             [control]="signupForm.get('gender')"
-            [options]="genderOptions"></app-input-radio>
+            [options]="genderOptions"></app-input-select>
 
             <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
             [headerText]="'e-mail'" 
