--- a/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
@@ -3,83 +3,81 @@
 
     <div class="container py-5">
         <form class="row mt-2" #updateProfileForm= "ngForm" (ngSubmit)= "changeAdmin()" [formGroup]="changeAdminForm">
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <app-input-text class="mb-2"
+                [headerText]="'Nombre'" 
+                [inputType]="'text'" 
+                [control]="changeAdminForm.get('name')"></app-input-text>
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Nombre'" 
-            [inputType]="'text'" 
-            [control]="changeAdminForm.get('name')"
-            class="col-lg-3 col-md-4 col-sm-6"></app-input-text>
+                <app-input-text class="mb-2"
+                [headerText]="'Apellidos'" 
+                [inputType]="'text'" 
+                [control]="changeAdminForm.get('lastname')"></app-input-text>
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Apellidos'" 
-            [inputType]="'text'" 
-            [control]="changeAdminForm.get('lastname')"
-            class="col-lg-3 col-md-4 col-sm-6"></app-input-text>
+                <app-input-date class="mb-2"
+                [headerText]="'Fecha de nacimiento'" 
+                [control]="changeAdminForm.get('birthdate')"></app-input-date>
 
-            <app-input-date class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Fecha de nacimiento'" 
-            [control]="changeAdminForm.get('birthdate')"></app-input-date>
+            </div>
 
-            <app-input-select class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'país'"
-            [control]="changeAdminForm.get('country')"
-            [options]="countryOptions"></app-input-select>
+            <div class="col-lg-3 col-md-4 col-sm-6">
 
-            <app-input-select class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Estado/Dep'"
-            [control]="changeAdminForm.get('state')"
-            [options]="stateOptions"></app-input-select>
+                <app-input-select class="mb-2"
+                [headerText]="'Género'"
+                [control]="changeAdminForm.get('gender')"
+                [options]="genderOptions"></app-input-select>
 
-            <app-input-select class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'ciudad'"
-            [control]="changeAdminForm.get('city')"
-            [options]="cityOptions"></app-input-select>
+                <app-input-text class="mb-2"
+                [headerText]="'e-mail'" 
+                [inputType]="'email'" 
+                [control]="changeAdminForm.get('email')"></app-input-text>
 
-            <app-input-select class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Género'"
-            [control]="changeAdminForm.get('gender')"
-            [options]="genderOptions"></app-input-select>
+            </div>
+            
+            <div class="col-lg-3 col-md-4 col-sm-6">
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'e-mail'" 
-            [inputType]="'email'" 
-            [control]="changeAdminForm.get('email')"
-            class="col-lg-3 col-md-4 col-sm-6"></app-input-text>
+                <app-input-select class="mb-2"
+                [headerText]="'país'"
+                [control]="changeAdminForm.get('country')"
+                [options]="countryOptions"></app-input-select>
 
-            <app-input-select class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Temas de interes'"
-            [control]="changeAdminForm.get('topic')"
-            [options]="topicOptions"></app-input-select>
+                <app-input-select class="mb-2"
+                [headerText]="'Estado/Dep'"
+                [control]="changeAdminForm.get('state')"
+                [options]="stateOptions"></app-input-select>
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Usuario'" 
-            [inputType]="'text'" 
-            [control]="changeAdminForm.get('username')"
-            class="col-lg-3 col-md-4 col-sm-6"></app-input-text>
+                <app-input-select class="mb-2"
+                [headerText]="'ciudad'"
+                [control]="changeAdminForm.get('city')"
+                [options]="cityOptions"></app-input-select>
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Contraseña actual'" 
-            [inputType]="'password'" 
-            [control]="changeAdminForm.get('oldPassword')"></app-input-text>
+            </div>
+            
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <app-input-text class="mb-2"
+                [headerText]="'Contraseña actual'" 
+                [inputType]="'password'" 
+                [control]="changeAdminForm.get('oldPassword')"></app-input-text>
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-2"
-            [headerText]="'Nueva contraseña'" 
-            [inputType]="'password'" 
-            [control]="changeAdminForm.get('password')"></app-input-text>
+                <app-input-text class="mb-2"
+                [headerText]="'Nueva contraseña'" 
+                [inputType]="'password'" 
+                [control]="changeAdminForm.get('password')"></app-input-text>
 
-            <app-input-text class="col-lg-3 col-md-4 col-sm-6 mb-1"
-            [headerText]="'Confirmar Contraseña'" 
-            [inputType]="'password'" 
-            [control]="changeAdminForm.get('confirmationPassword')"
-            class="col-lg-3 col-md-4 col-sm-6"></app-input-text>
+                <app-input-text class="mb-2"
+                [headerText]="'Confirmar Contraseña'" 
+                [inputType]="'password'" 
+                [control]="changeAdminForm.get('confirmationPassword')"></app-input-text>
+            </div>
+            
 
             <div *ngIf="isFormError()" class="d-flex justify-content-center col-lg-12 col-md-12 col-sm-12 m-0 alert alert-danger" role="alert">
                 <p *ngIf="signupForm.errors.noMatchingPassword">Las contraseñas no coinciden.</p>
             </div>
             
-            <div class="d-flex justify-content-center col-lg-12 col-md-12 col-sm-12 m-0">
+            <div class="d-flex flex-md-row justify-content-around col-lg-12 col-md-12 col-sm-12 m-0 disposition0">
                 <button class="custom-large-btn" type="submit" [disabled]="changeAdminForm.invalid">Actualizar</button>
-                <button class="btn-light custom-large-btn" type="button" (click)="goTo('home')">Cancelar</button>
+                <button class="btn-light custom-large-btn" type="button" (click)="goTo('main-admin')">Cancelar</button>
             </div>
         
         </form>
