--- a/cosmosLibrary/src/app/components/admin/main-admin/main-admin.component.html
+++ b/cosmosLibrary/src/app/components/admin/main-admin/main-admin.component.html
@@ -2,12 +2,11 @@
     <app-header></app-header>
 
     <div class="row px-5">
-            <button class="custom-large-btn col-sm-6 col-md-3 col-lg-3" type="button" (click)="goTo('add-book')">Ingresar libro</button>
+            <button class="custom-large-btn col-lg-3 col-md-4 col-sm-6" type="button" (click)="goTo('add-book')">Ingresar libro</button>
             <button class="custom-large-btn col-sm-6 col-md-3 col-lg-3" type="button" (click)="goTo('manage-book')">Administrar libro</button>
     </div>
     <div class="row px-5">
-        <button class="custom-large-btn col-sm-6 col-md-4 col-lg-3" type="button" (click)="goTo('historical-sold-out')">Histórico agotados</button>
-        <button class="custom-large-btn col-sm-6 col-md-4 col-lg-3" type="button" (click)="goTo('change-admin-password')">Cambiar contraseña</button>
+        <button class="custom-large-btn col-lg-3 col-md-4 col-sm-6" type="button" (click)="goTo('change-admin-password')">Cambiar contraseña</button>
     </div> 
 
 </div>
