--- a/cosmosLibrary/src/app/components/client/profile/profile.component.html
+++ b/cosmosLibrary/src/app/components/client/profile/profile.component.html
@@ -83,7 +83,7 @@
             
             <div class="d-flex flex-md-row justify-content-around col-lg-12 col-md-12 col-sm-12 m-0 disposition0">
                 <button class="custom-large-btn" type="submit" [disabled]="updateprofileForm.invalid">Actualizar</button>
-                <button class="btn-light custom-large-btn" type="button" (click)="goTo('home')">Cancelar</button>
+                <button class="btn-light custom-large-btn" type="button" (click)="goTo('home-client')">Cancelar</button>
             </div>
         
         </form>
