--- a/cosmosLibrary/src/app/components/main/home/home.component.scss
+++ b/cosmosLibrary/src/app/components/main/home/home.component.scss
@@ -16,6 +16,11 @@ $gray-3:#363636;
     cursor: pointer;
 }
 
+.mat-icon, .form-group-2, .form-control-2:focus{
+    outline-color: transparent!important;
+    border-radius: 30px;
+}
+
 
 
 @include media-breakpoint-between(xs, sm) {
@@ -39,7 +44,7 @@ $gray-3:#363636;
         padding-top: 0.2rem;
         padding-bottom: 0.2rem;
         padding-right: 0.6rem;
-        padding-left: 1.5rem;
+        padding-left: 2rem;
         width: 80%;
         align-self: center;
     }
@@ -47,7 +52,7 @@ $gray-3:#363636;
     ::placeholder{
         letter-spacing: 0.04rem;
         color: rgba($color: $gray-2, $alpha: 1);
-        text-align: right;
+        text-align: left;
         font-size: 13px;
     }
 
@@ -77,7 +82,7 @@ $gray-3:#363636;
         flex-grow: 5;
         letter-spacing: 0.04rem;
         text-overflow: ellipsis;
-        padding: 0.2rem 0.7rem;
+        padding: 0.2rem 2rem;
         width: 80%;
         align-self: center;
     }
@@ -85,7 +90,7 @@ $gray-3:#363636;
     ::placeholder{
         letter-spacing: 0.04rem;
         color: rgba($color: $gray-2, $alpha: 1);
-        text-align: right;
+        text-align: left;
         font-size: 16px;
     }
 
